Tweaked transitions and animations, fixed overflow for blurred shapes, tweaked charts.

--- a/src/components/Testimonials/index.module.css
+++ b/src/components/Testimonials/index.module.css
@@ -1,7 +1,6 @@
 .main {
     width: 100%;
     position: relative;
-    overflow: hidden;
     height: 100%;
     display: inline-flex;
     flex-direction: column;
